# RoadMesh-project

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: base.yaml
configs/data/: moscow.yaml
configs/model/: dlinknet_8gb.yaml
data/predictions/: 302ee4f0.geojson
data/visualization/: map.html
docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md
scripts/: download_pretrained.py  prepare_dataset.py  test_pipeline.py  train.py  train_deepglobe.py  visualize_map.py
src/roadmesh/: __init__.py
src/roadmesh/api/: app.py
src/roadmesh/app/: server.py
src/roadmesh/core/: config.py
src/roadmesh/data/: dataset.py  label_processor.py  tile_fetcher.py
src/roadmesh/geometry/: vectorizer.py
src/roadmesh/models/: __init__.py  architectures.py  losses.py  pretrained.py
src/roadmesh/training/: trainer.py
static/: index.html
